# Tyradex

./: LICENSE  README.md  README_FRENCH.md  pyproject.toml  pyprojectc.toml
exemples/Tyradex/: Gen.get.py  Pokemon.get.py  Type.get.py  exemples.py
src/.cache/pokemon/: 778.json
src/.cache/types/: Fee.json  Spectre.json
src/.cache/types/15/: 5.json
src/Tyradex/: __init__.py  __main__.py
src/Tyradex/abc/: __init__.py
src/Tyradex/errors/: __init__.py
src/Tyradex/maker/: __init__.py
test/: __init__.py
