[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Tyradex"
version = "0.1.0"
authors = [
    {name = "Yarkis01"},
    {name = "Ashzuu"},
    {name = "LassaInora", email = "lassa.inora@gmail.com"},
]
description = "Une simple API Pokémon en français."
readme = "README.md"
homepage = "https://github.com/LassaInora/Tyradex"

[tool.setuptools]
python_version = ">=3.8"

[tool.setuptools.dependencies]
python = ">=3.8"
requests = "==2.26.0"
unidecode = "==1.4.1"